# marlin-lang

./: Cargo.toml  My circuit.sim  hello  hello.ll  shell.nix
src/: .env  CharUtil.ll  Main.ll  Math.ll  STM32F429ZITx_FLASH.ld  a.out  array.ul  ast.json  codegen.rs  commands.txt  compiler.rs  diagnostic.rs  environment.rs  error.rs  fib.ul  for.ul  func.ul  grammar.txt  instruction.rs  interpreter.rs  isa.txt  item.rs  lexer.rs  log.rs  logger.rs  main.rs  makefile  opcodes.rs  openocd.cfg  operator.rs  output.ll  parser.rs  pointer.ul  reftest.ul  resolve.ul  resolver.rs  run.rs  startup_stm32f429xx.s  std.ll  struct.ul  (+8 more)
src/ast/: arguments.rs  array_access.rs  assignment_expr.rs  binary_expr.rs  block_expr.rs  break_expr.rs  call_expr.rs  cast.rs  constructor_call.rs  constructor_item.rs  declaration_expr.rs  delete_expr.rs  exit_expr.rs  function_access.rs  function_call.rs  function_item.rs  function_prototype.rs  get_address_expr.rs  get_char_expr.rs  if_expr.rs  impl_item.rs  literal_expr.rs  loop_expr.rs  lvar_expr.rs  main_item.rs  member_access.rs  mod.rs  new_array_expr.rs  parameters.rs  parsed_type.rs  path.rs  program.rs  put_char_expr.rs  require.rs  return_expr.rs  rvar_expr.rs  scope.rs  static_array_expr.rs  struct_access.rs  struct_initializer_expr.rs  (+3 more)
src/compiler/: local_resolver.rs  mod.rs  visit.rs
src/expr/: assignment_expr.rs  binary_expr.rs  block_expr.rs  break_expr.rs  call_expr.rs  declaration_expr.rs  expr.rs  function_item.rs  get_address_expr.rs  get_char_expr.rs  grammar.txt  if_expr.rs  item.rs  literal_expr.rs  loop_expr.rs  mod.rs  (+6 more)
(+138 files in other folders)
