[package]
name = "marlin_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = "1.4.0"
enum-map = "2.7.3"
rand = "0.8.5"
dotenv = "0.15.0"
chrono = "0.4.40"
once_cell = "1.21.1"
erased-serde = "0.3"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"