[package]
name = "marlin_lang"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dotenv = "0.15.0"
chrono = "0.4.40"
once_cell = "1.21.1"
erased-serde = "0.4.9"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
inkwell = { version = "0.7.1", features = ["llvm18-1"] }
dashmap = "6.1.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "parking_lot", "fs", "macros"] }
